--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,32 +16,30 @@ form {
   display: flex;
   justify-content: center;
 }
-.channelDetails{
+.channelDetails {
   margin-right: 50px;
   margin-bottom: 120px;
   display: inline-block;
 
   max-height: 260px;
-  width:300px;
+  width: 300px;
 }
-.channelDetailsHidden{
+.channelDetailsHidden {
   margin-right: 50px;
   margin-bottom: 300px;
   width: 300px;
-  overflow-y:auto;
+  overflow-y: auto;
   visibility: hidden;
 }
-.dataLabel{
+.dataLabel {
   display: inline-block;
-  min-width:100px;
-  
+  min-width: 100px;
 }
 .playerBox {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-right: 170px;
-
 }
 
 .hiddenPlayerBox {
@@ -51,7 +49,7 @@ form {
   visibility: hidden;
 }
 #playlistTable {
-  display: inline-block ;
+  display: inline-block;
   overflow-y: scroll;
   max-height: 360px;
 }
@@ -101,46 +99,45 @@ button.link {
 .suggestedVideo:hover {
   background-color: lightblue;
 }
-.videoDetails{
-
+.videoDetails {
   width: 640px;
 }
-.centerDetails{
+.centerDetails {
   display: flex;
   justify-content: center;
   margin-right: 97px;
 }
-.videoDetailsHidden{
+.videoDetailsHidden {
   visibility: hidden;
 }
-.videoDetails .left{
+.videoDetails .left {
   float: left;
 }
-.videoDetails .right{
-  float:right;
+.videoDetails .right {
+  float: right;
   display: inline-flex;
 }
-.greenRatingVisual{
+.greenRatingVisual {
   height: 20px;
   width: 20px;
   background-color: greenyellow;
   margin-top: -2px;
 }
-.orangeRatingVisual{
+.orangeRatingVisual {
   height: 20px;
   width: 20px;
   background-color: orange;
   margin-top: -2px;
 }
-.likeBar{
-  display:inline-block;
+.likeBar {
+  display: inline-block;
   height: 15px;
   background-color: #2be225ef;
   margin-top: -2px;
 }
-.disLikeBar{
-  display:inline-block;
+.disLikeBar {
+  display: inline-block;
   height: 15px;
-  background-color: #ED254E;
+  background-color: #ed254e;
   margin-top: -2px;
 }
